--- a/_modules/thetis/equation.html
+++ b/_modules/thetis/equation.html
@@ -5,13 +5,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>thetis.equation &#8212; Thetis 0.0.5+875.ge1658a7 documentation</title>
+    <title>thetis.equation &#8212; Thetis 0+untagged.1138.g086f153 documentation</title>
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.0.5+875.ge1658a7',
+        VERSION:     '0+untagged.1138.g086f153',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -69,6 +69,7 @@
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="k">import</span> <span class="n">absolute_import</span>
 <span class="kn">from</span> <span class="nn">.utility</span> <span class="k">import</span> <span class="o">*</span>
+<span class="kn">from</span> <span class="nn">collections</span> <span class="k">import</span> <span class="n">OrderedDict</span>
 
 
 <div class="viewcode-block" id="Term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term">[docs]</a><span class="k">class</span> <span class="nc">Term</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
@@ -76,7 +77,7 @@
 <span class="sd">    Implements a single term of an equation.</span>
 
 <span class="sd">    .. note::</span>
-<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
+<span class="sd">        Sign convention: all terms are assumed to be on the right hand side of the equation: d(u)/dt = term.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -89,7 +90,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">tri</span> <span class="o">=</span> <span class="n">TrialFunction</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">function_space</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">normal</span> <span class="o">=</span> <span class="n">FacetNormal</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">mesh</span><span class="p">)</span>
         <span class="c1"># TODO construct them here from mesh ?</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">boundary_markers</span> <span class="o">=</span> <span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span><span class="o">.</span><span class="n">exterior_facets</span><span class="o">.</span><span class="n">unique_markers</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">boundary_markers</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span><span class="o">.</span><span class="n">exterior_facets</span><span class="o">.</span><span class="n">unique_markers</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">boundary_len</span> <span class="o">=</span> <span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span><span class="o">.</span><span class="n">boundary_len</span>
 
 <div class="viewcode-block" id="Term.residual"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
@@ -126,7 +127,7 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implements an equation, made out of terms.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">SUPPORTED_LABELS</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;source&#39;</span><span class="p">,</span> <span class="s1">&#39;explicit&#39;</span><span class="p">,</span> <span class="s1">&#39;implicit&#39;</span><span class="p">,</span> <span class="s1">&#39;nonlinear&#39;</span><span class="p">]</span>
+    <span class="n">SUPPORTED_LABELS</span> <span class="o">=</span> <span class="nb">frozenset</span><span class="p">([</span><span class="s1">&#39;source&#39;</span><span class="p">,</span> <span class="s1">&#39;explicit&#39;</span><span class="p">,</span> <span class="s1">&#39;implicit&#39;</span><span class="p">,</span> <span class="s1">&#39;nonlinear&#39;</span><span class="p">])</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Valid labels for terms, indicating how they should be treated in the time</span>
 <span class="sd">    integrator.</span>
@@ -148,7 +149,7 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: the :class:`FunctionSpace` the solution belongs to</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">terms</span> <span class="o">=</span> <span class="p">{}</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">terms</span> <span class="o">=</span> <span class="n">OrderedDict</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">labels</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span> <span class="o">=</span> <span class="n">function_space</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">mesh</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span>
@@ -179,19 +180,19 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="p">[</span><span class="n">key</span><span class="p">]</span> <span class="o">=</span> <span class="n">term</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">label_term</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">label</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="Equation.label_term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.label_term">[docs]</a>    <span class="k">def</span> <span class="nf">label_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+<div class="viewcode-block" id="Equation.label_term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.label_term">[docs]</a>    <span class="k">def</span> <span class="nf">label_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">term</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Assings a label to the given term(s).</span>
 
 <span class="sd">        :arg term: :class:`.Term` object, or a tuple of terms</span>
 <span class="sd">        :arg label: string label to assign</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
-            <span class="k">assert</span> <span class="n">key</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="p">,</span> <span class="s1">&#39;Unknown term, add it to the equation&#39;</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">term</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
+            <span class="k">assert</span> <span class="n">term</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="p">,</span> <span class="s1">&#39;Unknown term, add it to the equation&#39;</span>
             <span class="k">assert</span> <span class="n">label</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">SUPPORTED_LABELS</span><span class="p">,</span> <span class="s1">&#39;bad label: </span><span class="si">{:}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">label</span><span class="p">)</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">labels</span><span class="p">[</span><span class="n">key</span><span class="p">]</span> <span class="o">=</span> <span class="n">label</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">labels</span><span class="p">[</span><span class="n">term</span><span class="p">]</span> <span class="o">=</span> <span class="n">label</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="nb">iter</span><span class="p">(</span><span class="n">key</span><span class="p">):</span>
+            <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="nb">iter</span><span class="p">(</span><span class="n">term</span><span class="p">):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">label_term</span><span class="p">(</span><span class="n">k</span><span class="p">,</span> <span class="n">label</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="Equation.select_terms"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.select_terms">[docs]</a>    <span class="k">def</span> <span class="nf">select_terms</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
@@ -205,18 +206,18 @@
             <span class="k">if</span> <span class="n">label</span> <span class="o">==</span> <span class="s1">&#39;all&#39;</span><span class="p">:</span>
                 <span class="n">labels</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">SUPPORTED_LABELS</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="n">labels</span> <span class="o">=</span> <span class="p">[</span><span class="n">label</span><span class="p">]</span>
+                <span class="n">labels</span> <span class="o">=</span> <span class="nb">frozenset</span><span class="p">([</span><span class="n">label</span><span class="p">])</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">labels</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">label</span><span class="p">)</span>
-        <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="p">:</span>
+            <span class="n">labels</span> <span class="o">=</span> <span class="nb">frozenset</span><span class="p">(</span><span class="n">label</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">labels</span><span class="p">[</span><span class="n">key</span><span class="p">]</span> <span class="ow">in</span> <span class="n">labels</span><span class="p">:</span>
-                <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="p">[</span><span class="n">key</span><span class="p">]</span></div>
+                <span class="k">yield</span> <span class="n">value</span></div>
 
 <div class="viewcode-block" id="Equation.residual"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.residual">[docs]</a>    <span class="k">def</span> <span class="nf">residual</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the residual by summing up all the terms with the desired label.</span>
 
-<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
+<span class="sd">        Sign convention: all terms are assumed to be on the right hand side of the equation: d(u)/dt = term.</span>
 
 <span class="sd">        :arg label: string defining the type of terms to sum up. Currently one of</span>
 <span class="sd">            &#39;source&#39;|&#39;explicit&#39;|&#39;implicit&#39;|&#39;nonlinear&#39;. Can be a list of multiple labels, or &#39;all&#39; in which</span>
@@ -238,7 +239,7 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the Jacobian by summing up all the Jacobians of the terms.</span>
 
-<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
+<span class="sd">        Sign convention: all terms are assumed to be on the right hand side of the equation: d(u)/dt = term.</span>
 
 <span class="sd">        :arg label: string defining the type of terms to sum up. Currently one of</span>
 <span class="sd">            &#39;source&#39;|&#39;explicit&#39;|&#39;implicit&#39;|&#39;nonlinear&#39;. Can be a list of multiple labels, or &#39;all&#39; in which</span>
@@ -266,7 +267,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.6.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.6.6.
     </div>
   </body>
 </html>
